--- a/app/globals.css
+++ b/app/globals.css
@@ -119,6 +119,9 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html {
+    @apply bg-slate-900;
+  }
   body {
     @apply bg-background text-foreground;
   }
